fix participant select visibility

--- a/src/components/ls-validation-tag/ls-validation-tag.css
+++ b/src/components/ls-validation-tag/ls-validation-tag.css
@@ -122,6 +122,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 1rem; /* 133.333% */
+  text-transform: capitalize;
 }
 
 .dropdown-header h2 {
